src/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etax-deployment
  labels:
    app: etax
spec:
  replicas: 3
  selector:
    matchLabels:
      app: etax
  template:
    metadata:
      labels:
        app: etax
    spec:
      containers:
      - name: etax
        image: docker.io/delenies/etax-docker:latest
        ports:
        - containerPort: 9005
