src/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etax-service
spec:
  selector:
    app: etax
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9005
